# Genetic-Hello-World

./: .gitignore  CMakeLists.txt  README.md
header/: entity.h  genetic.h  parameters.hpp  population.h
src/: entity.cpp  genetic.cpp  main.cpp  population.cpp
